# agenticai

./: .gitignore  pyproject.toml
01-ml/: 1_linear_regression.ipynb  2_linear_regression_multivariate.ipynb
02-openai-prompt-engg/: 01-using-openai-chatbot-todo.ipynb  01-using-openai-chatbot.ipynb  02-chatbot-usingstreamlit-todo.py  02-chatbot-usingstreamlit.py  03-prompt-engg-old.ipynb  03-prompt-engg.ipynb  04-embeddings-openai.ipynb
03-langchain-latest/: 01_langchain_basics-todo.ipynb  01_langchain_basics.ipynb  02_chatbotusingchain.py  02_chatbotusingchain_todo.py  03_using_runnables.ipynb  04_usingchainofchains.py  04_usingchainofchains_todo.py  05_chat_with_and_without_memory.ipynb  06-chatbot-using-memory-streamlit-todos.py  06-chatbot-using-memory-streamlit.py  06-vector-stores-and-RAG-todo.ipynb  06-vector-stores-and-RAG.ipynb  07-chat-with-pdf-todo.py  07-chat-with-pdf.py  08-conversational-rag.ipynb  09-using-tools-agents-required.ipynb  09-using-tools-agents.ipynb  10-code-interpreter.ipynb  11-gmailapp.py  12_azure_openai.ipynb  README.md  fintech_assistant.py  requirements.txt
03-langchain-latest/fintech_app/: app.py  project_description.ipynb
04-langgraph/: 01-LangGraphLearning.ipynb  03-chatbot_summarization.ipynb  04-parallelization.ipynb  05-langgraph-parallel-processing-.ipynb  06-parallel-processing.ipynb  07-multiagentic-app-withllm-as-supervisor.ipynb  08-langgraph_agentic_rag.ipynb  09-subgraphs.ipynb  checkpoints.sqlite-shm  checkpoints.sqlite-wal  pyproject.toml
04-langgraph/fintech_langgraph/: USECASE.md  __init__.py  app.py  db_setup.py  financial_knowledge.txt  financial_services_knowledge.txt  healthcare_sector_knowledge.txt  (+3 more)
(+24 files in other folders)
