[project]
name = "agenticai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.11.0",
    "google-api-python-client>=2.173.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "google-search-results>=2.4.2",
    "gradio>=5.34.2",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.26",
    "langchain-core>=0.3.66",
    "langchain-experimental>=0.3.4",
    "langchain-openai>=0.3.24",
    "langchainhub>=0.1.21",
    "pypdf>=5.6.0",
    "serpapi>=0.1.5",
]
