[project]
name = "agenticai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "faiss-cpu>=1.11.0",
    "google-api-python-client>=2.173.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "google-search-results>=2.4.2",
    "gradio>=5.34.2",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.26",
    "langchain-core>=0.3.66",
    "langchain-experimental>=0.3.4",
    "langchain-huggingface>=0.3.0",
    "langchain-openai>=0.3.24",
    "langchain-text-splitters>=0.3.8",
    "langchainhub>=0.1.21",
    "langgraph>=0.4.8",
    "langgraph-checkpoint-sqlite>=2.0.10",
    "langsmith>=0.4.1",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "pyowm>=3.3.0",
    "pypdf>=5.6.0",
    "sentence-transformers>=4.1.0",
    "serpapi>=0.1.5",
    "setuptools>=80.9.0",
    "tavily-python>=0.7.7",
    "tiktoken>=0.9.0",
    "wikipedia>=1.4.0",
]
